2010-08-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.5

2010-08-21  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Some of NTEmacs compatibility with Meadow.

2010-08-18  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Use `quit' signal.

2010-08-16  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Simplify NTEmacs install process.

2010-08-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: obsolete fsvn-set-prop-value -> fsvn-set-propset
	          obsolete fsvn-set-prop-delete -> fsvn-set-propdel
	          fsvn-get-propget change arg order

	* Fix: fsvn-svk some refactor

2010-08-05  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: Drastic changes about svk implements.

2010-08-04  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: Easy Menu (browse, log)

	* Add: Can create patch.

2010-08-03  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Make `svn diff' asynchrounous.

2010-08-01  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.4

2010-07-22  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Unterminated message.

	* Fix: Change mode-name.

2010-07-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: Complete revision by `svn log'.

	* Fix: Complete revision ignore-case.

	* Add: Merged import.

	* Add: fsvn-browse-paste-properties-to-this

2010-07-09  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Wrong fontified in fsvn-log-list-mode

	* Fix: popup to showing window

2010-06-29  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Undo problems.
	* Fix: Change keybind fsvn-process-list-toggle-show-all
	      C-c C-h -> C-c C-t

2010-06-25  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Support tree-conflict showing.

2010-06-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.3

2010-06-14  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
