@@ -28,6 +28,9 @@ buffer name start with ` ' (space)
 
 ** tool-bar
 
+** to configure ex: C-c C-u
+
+** search log diff and message
 
 * magic
 ** `fsvn-magic-directory-files' accept svn:externals
@@ -66,9 +69,6 @@ SomeFile.cs          -> AnyFile.cs
 ** parasite-*-execute command accept optional argument
 
 * completion
-** fsvn-read-subcommand-args accept quoted string
-  space containing filename must have quoted string.
-
 ** fsvn-completing-url to parse previous segment
 ** fsvn-completing-read-url behavior different general Emacs one.
 ** completing read implementation cleaning.
@@ -96,10 +96,6 @@ revision range and log base url
 ** fsvn-log-list-mode gui viewer.
  call tortoise viewer (Windows)
 ** logview-mode diff with non visible revision.
-
-** this file arg to interactive arg
-
-** refactor about diff
 
 ** show copy-from
 
