@@ -19,6 +19,16 @@ Optional ARGS (with \\[universal-argument]) means read svn subcommand arguments.
   (interactive)
   )
 
+;;TODO
+;; (defun fsvn-browse-copy-path-in-repository (to-url &optional args)
+;;   "Execute `copy' for repository file corresponding current directory.
+;; Optional ARGS (with \\[universal-argument]) means read svn subcommand arguments.
+
+;; This makes faster copy than in working copy.
+;; "
+;;   (interactive)
+;;   (fsvn-browse-copy-this-in-repository (fsvn-browse-current-repository-url) to-url args))
+
 
 
 (defcustom fsvn-browse-guessed-moved-parent-threshold 4
@@ -83,19 +93,6 @@ Optional ARGS (with \\[universal-argument]) means read svn subcommand arguments.
 	 (setq entries (fsvn-logs-unique-merge entries entry))))
      urlrevs)
     (sort entries (lambda (l1 l2) (< (fsvn-xml-log->logentry.revision l1) (fsvn-xml-log->logentry.revision l2))))))
-
-
-
-(add-hook 'fsvn-log-list-mode-hook
-	  (lambda ()
-	    (define-key fsvn-log-list-mode-map "\C-c\C-t" 'fsvn-log-list-revert-to-revision)))
-
-(defun fsvn-log-list-revert-to-revision (urlrev local-file)
-  (interactive (fsvn-log-list-cmd-read-revert-to-revision))
-  (fsvn-async-let ((urlrev urlrev)
-		   (local-file local-file))
-    (fsvn-popup-start-process "delete" (list local-file))
-    (fsvn-popup-start-copy/move-process "copy" (list urlrev) local-file)))
 
 
 
@@ -189,7 +186,6 @@ How to send a bug report:
       (set-buffer-modified-p nil)
       (kill-buffer (current-buffer)))))
 
-
 
 
 ;;TODO
@@ -208,54 +204,11 @@ How to send a bug report:
   (let ((file fsvn-logview-target-urlrev)
 	(rev (fsvn-log-list-point-revision))
 	buffer diff-args)
+    ;; TODO svn can't accept non versioned file
     (setq diff-args (list "--revision" rev file))
     (fsvn-diff-start-process diff-args args)))
 
-(defun fsvn-log-list-cmd-read-create-patch-region ()
-  (unless mark-active
-    (error "Mark is not active"))
-  (let* ((region (fsvn-log-list-region-revision t))
-	 (patch (fsvn-read-file-name "Patch file: ")))
-    (when (file-exists-p patch)
-      (unless (y-or-n-p "File exists. Overwrite? ")
-	(signal 'quit nil)))
-    (list (car region) (cdr region) patch)))
-
-(defun fsvn-log-list-create-patch-region (from-urlrev to-urlrev patch-file)
-  "Create PATCH-FILE contains FROM-URLREV to TO-URLREV.
-FROM-URLREV is marked point revision, TO-URLREV is current point revision."
-  (interactive (fsvn-log-list-cmd-read-create-patch-region))
-  (let ((file (fsvn-expand-file patch-file))
-	proc)
-    (write-region "" nil file)
-    (setq proc (fsvn-start-process nil "diff" from-urlrev to-urlrev))
-    (set-process-sentinel proc (lambda (proc event) 
-				 (message "Patch was created.")))
-    (set-process-filter proc `(lambda (proc event)
-				(write-region event nil ,file t)))
-    proc))
-
 
-
-(defconst fsvn-proplist-mode-menu-spec
-  '("fsvn"
-
-    ))
-
-(easy-menu-define fsvn-proplist-mode-menu
-  fsvn-proplist-mode-map
-  "Menu used in Fsvn Property List mode."
-  fsvn-proplist-mode-menu-spec)
-
-(defconst fsvn-propedit-mode-menu-spec
-  '("fsvn"
-
-    ))
-
-(easy-menu-define fsvn-propedit-mode-menu
-  fsvn-propedit-mode-map
-  "Menu used in Fsvn Property Edit mode."
-  fsvn-propedit-mode-menu-spec)
 
 (defconst fsvn-process-list-mode-menu-spec
   '("fsvn"
