@@ -1,5 +1,17 @@
 2010-08-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
+	* Fix: completing read command argument quoted string.
+
+	* Add: easymenu (proplist, propedit)
+
+	* Add: fsvn-log-list-revert-to-revision key is bound to `C-c C-t'
+
+	* Add: fsvn-log-list-create-patch-generic key is bound to `= p'
+
+	* Change: fsvn-browse-cmd-read-create-patch-path -> fsvn-cmd-read-patch-file
+
+2010-08-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
 	* Release: 0.9.5
 
 2010-08-21  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
